--- a/trisha/src/app/globals.css
+++ b/trisha/src/app/globals.css
@@ -21,3 +21,67 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif; */
 }
+
+@font-face {
+  font-family: 'Satoshi';
+  src: url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Regular.woff')
+      format('woff'),
+    url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Regular.woff2')
+      format('woff2'),
+    url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Regular.ttf')
+      format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Satoshi';
+  src: url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Medium.woff')
+      format('woff'),
+    url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Medium.woff2')
+      format('woff2'),
+    url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Medium.ttf')
+      format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Satoshi';
+  src: url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Light.woff')
+      format('woff'),
+    url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Light.woff2')
+      format('woff2'),
+    url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Light.ttf')
+      format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Satoshi';
+  src: url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-ExtraLight.woff')
+      format('woff'),
+    url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-ExtraLight.woff2')
+      format('woff2'),
+    url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-ExtraLight.ttf')
+      format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Satoshi';
+  src: url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Bold.woff')
+      format('woff'),
+    url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Bold.woff2')
+      format('woff2'),
+    url('/fonts/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Bold.ttf')
+      format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+* {
+  font-family: 'Satoshi', Arial, sans-serif;
+}
