--- a/trisha/src/app/components/Section1/styles.css
+++ b/trisha/src/app/components/Section1/styles.css
@@ -4,5 +4,6 @@
   background: url('../../../assets/section1BgImg.png');
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
   filter: brightness(50%);
 }
