--- a/trisha/src/app/components/Section6/styles.css
+++ b/trisha/src/app/components/Section6/styles.css
@@ -2,10 +2,10 @@
 
 .image {
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   width: 600px;
-  height: 300px;
+  height: 500px;
 }
 
 .scrollbar-hidden::-webkit-scrollbar {
@@ -27,7 +27,7 @@
   0% {
     transform: translateX(0);
   }
-  25% {
+  75% {
     transform: translateX(-50%);
   }
   /* 50% {
